# dynamic-games-RL

./: Copy of github_push_colab.ipynb  README.md  Untitled0.ipynb  pyproject.toml
marl/: nets.py
marl/agents/: dynamic_game_solver.py  ppo_base.py  ppo_stackelberg.py
